force-app/main/default/objects/a4x_Forecast_Consolidation_Mapping__mdt/a4x_Forecast_Consolidation_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>a4x Forecast Consolidation Mapping</label>
    <pluralLabel>a4x Forecast Consolidation Mappings</pluralLabel>
</CustomObject>