force-app/main/default/objects/a4x_Forecast_Consolidation_Mapping__mdt/fields/Account_To_Consolidate__c.field-meta.xml
<CustomField>
    <fullName>Account_To_Consolidate__c</fullName>
    <label>Account To Consolidate</label>
    <length>30</length>
    <type>Text</type>
</CustomField>