force-app/main/default/objects/a4x_Forecast_Consolidation_Mapping__mdt/fields/Order_Account__c.field-meta.xml
<CustomField>
    <fullName>Order_Account__c</fullName>
    <label>Order Account</label>
    <length>30</length>
    <type>Text</type>
</CustomField>