force-app/main/default/objects/a4x_Forecast_Consolidation_Mapping__mdt/fields/Order_End_Customer__c.field-meta.xml
<CustomField>
    <fullName>Order_End_Customer__c</fullName>
    <label>Order End Customer</label>
    <length>30</length>
    <type>Text</type>
</CustomField>