force-app/main/default/objects/a4x_Forecast_Consolidation_Mapping__mdt/fields/Order_Project_Owner__c.field-meta.xml
<CustomField>
    <fullName>Order_Project_Owner__c</fullName>
    <label>Order Project Owner</label>
    <length>30</length>
    <type>Text</type>
</CustomField>