force-app/main/default/objects/a4x_Forecast_Consolidation_Mapping__mdt/fields/Region_To_Consolidate__c.field-meta.xml
<CustomField>
    <fullName>Region_To_Consolidate__c</fullName>
    <label>Region To Consolidate</label>
    <length>30</length>
    <type>Text</type>
</CustomField>