force-app/main/default/objects/a4x_Forecast_Consolidation_Mapping__mdt/listViews/All_Consolidation_Mappings.listView-meta.xml
<ListView>
    <fullName>All_Consolidation_Mappings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Active__c</columns>
    <columns>Order_End_Customer__c</columns>
    <columns>Order_Project_Owner__c</columns>
    <columns>Order_Account__c</columns>
    <columns>Account_To_Consolidate__c</columns>
    <columns>Country_To_Consolidate__c</columns>
    <columns>Region_To_Consolidate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Consolidation Mappings</label>
</ListView>